--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,16 @@ h1 {
     
     display: flex;
 }
+
+.blog-post{
+    margin: 10px;
+    background-color: white;
+    border-color: lightgray;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.blog-post img{
+    float: left;
+    margin: 0px 10px 0px 10px;
+}
